build(package.json): change port from null to 3001

--- a/demo2/package.json
+++ b/demo2/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "dev build",
 	"dev": "webpack-dev-server --open",
-	"build": "webpack -p"
+	"build": "webpack -p=3001"
   },
   "author": "",
   "license": "ISC"
