--- a/demo3/package.json
+++ b/demo3/package.json
@@ -12,8 +12,12 @@
   "author": "shadow",
   "license": "ISC",
   "dependencies": {
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "web-webpack-plugin": "^4.6.7",
+    "webpack": "^5.36.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
